k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethiolearn
  labels:
    app: ethiolearn
