k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ethiolearn-ingress
  namespace: ethiolearn
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: ethiolearn.local # can be replaced with production domain like ethiolearn.com
      http:
        paths:
          # Route auth endpoints to NestJS D-auth middleware
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Route api documentation and Swagger endpoints to NestJS
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Route backend business services
          - path: /(users|courses|bookings|payments|reviews|storage)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Route overall traffic to Next.js Web client
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
